# ergon

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  CODEX.md  CONTRIBUTING.md  CURSOR.md  DATABASE.md  Dockerfile  GEMINI.md  LICENSE  README.md  a.md  docker-compose.ci.yml  docker-compose.real-llm.yml  docker-compose.yml  example.txt  init-db.sh  package.json  pyproject.toml  theory.tex
arcane_builtins/: pyproject.toml
arcane_builtins/arcane_builtins/: __init__.py  registry.py  registry_core.py  registry_local_models.py
arcane_builtins/arcane_builtins/models/: __init__.py  transformers_backend.py  vllm_backend.py
arcane_cli/: pyproject.toml
arcane_cli/arcane_cli/: main.py
arcane_cli/arcane_cli/commands/: benchmark.py  eval.py  evaluator.py  experiment.py  run.py  train.py  worker.py
arcane_cli/arcane_cli/composition/: __init__.py
arcane_cli/arcane_cli/discovery/: __init__.py
arcane_cli/arcane_cli/rendering/: __init__.py
ergon_builtins/: AGENTS.md  pyproject.toml
ergon_builtins/ergon_builtins/: __init__.py  registry.py  registry_core.py  registry_data.py  registry_local_models.py  sandbox_runtime.py
ergon_builtins/ergon_builtins/benchmarks/: README.md
ergon_builtins/ergon_builtins/common/: __init__.py
ergon_builtins/ergon_builtins/models/: __init__.py  cloud_passthrough.py  openrouter_backend.py  openrouter_responses_backend.py  resolution.py  stub_constant_backend.py  transformers_backend.py  vllm_backend.py
ergon_builtins/ergon_builtins/observability/: __init__.py  pydantic_ai_logfire.py
ergon_builtins/ergon_builtins/sandbox/: __init__.py  _manager_backed.py  e2b_runtime.py  e2b_sandbox.py
ergon_builtins/ergon_builtins/sandboxes/: __init__.py  lean.py
ergon_builtins/ergon_builtins/shared/: __init__.py
ergon_builtins/ergon_builtins/toolkits/: __init__.py  _minif2f_tools.py  gdpeval.py  minif2f.py  react.py  researchrubrics.py  swebench.py
ergon_builtins/ergon_builtins/tools/: bash_sandbox_tool.py  benchmark_toolkit_composer.py  graph_toolkit.py  graph_toolkit_types.py  research_rubrics_toolkit.py  subtask_lifecycle_toolkit.py  task_management_responses.py  task_management_toolkit.py  workflow_cli_tool.py
ergon_builtins/ergon_builtins/workers/: __init__.py  react_output.py  react_worker.py  tool_budget.py  training_stub_worker.py
ergon_builtins/tests/unit/: test_builtin_task_definition_roundtrip.py  test_gdpeval_v2_definition.py  test_research_rubrics_v2_definition.py  test_swebench_v2_definition.py
ergon_cli/: pyproject.toml
ergon_cli/ergon_cli/: __init__.py  api_app.py  bootstrap.py  main.py
ergon_cli/ergon_cli/commands/: benchmark.py  doctor.py  eval.py  evaluator.py  experiment.py  onboard.py  run.py  stack.py  train.py  worker.py  workflow.py
ergon_cli/ergon_cli/composition/: __init__.py
ergon_cli/ergon_cli/discovery/: __init__.py
ergon_cli/ergon_cli/onboarding/: __init__.py  env_writer.py  installer.py  profile.py  prompts.py
ergon_cli/ergon_cli/rendering/: __init__.py
ergon_cli/tests/: conftest.py
ergon_core/: pyproject.toml
ergon_core/ergon_core/api/: __init__.py  _definition.py  _serialization.py  benchmark.py  benchmark_deps.py  criterion.py  criterion_runtime.py  errors.py  evaluation_context.py  evaluator.py  experiment.py  generation.py  handles.py  json_types.py  registry.py  results.py  run_resource.py  task_types.py  template_spec.py  toolkit.py  types.py  worker.py  worker_context.py  worker_spec.py
ergon_core/ergon_core/core/: generation.py  settings.py  utils.py
ergon_core/ergon_core/test_support/: __init__.py  e2e_read_helpers.py  task_factory.py
ergon_core/migrations/: README  env.py
ergon_core/migrations/versions/: 00000000_initial_v2.py  0a1b2c3d4e5f_add_thread_summary.py  11f1497a53e8_add_batch_operation_id_to_run_graph_.py  307fcca3a621_drop_run_task_state_events.py  4a71a3dc2ef5_add_blocked_to_taskexecutionstatus_enum.py  5f01559f2bc3_initial_schema_v2.py  7c9661121a86_add_triggered_by_mutation_id_to_run_.py  84519b3f8431_add_cancelled_to_taskexecutionstatus_enum.py  925ff225d97e_add_sandbox_id_to_run_task_executions.py  a1b2c3d4e5f6_add_execution_outcome.py  a1b2c3d4e5f6_unique_thread_run_topic.py  a2b3c4d5e6f7_add_copied_from_resource_id.py  a66564b89aac_rename_output_text_to_final_assistant_.py  aa11bb22cc33_authoring_api_object_bound_tasks.py  aabbccdd0001_add_run_graph_task_json.py  aabbccdd0002_add_worker_output_json.py  aabbccdd0003_add_definition_task_json.py  aabbccdd0004_add_experiment_tag.py  aabbccdd0004_definition_metadata_and_launch.py  aabbccdd0005_add_experiment_tag.py  (+17 more)
ergon_core/tests/: conftest.py
ergon_infra/: pyproject.toml
ergon_infra/ergon_infra/: __init__.py
ergon_ingestion/: pyproject.toml
ergon_ingestion/ergon_ingestion/: __init__.py  cli.py  models.py  registry.py
h_arcane/: __init__.py  pyproject.toml  settings.py  task.py
h_arcane/agents/: sandbox.py  sandbox_executor.py  stakeholder.py  toolkit.py  tools.py  tracing.py  worker.py
h_arcane/api/: __init__.py  main.py
h_arcane/benchmarks/: __init__.py  base.py  enums.py  registry.py  types.py
h_arcane/cli/: __init__.py  main.py
h_arcane/config/: __init__.py  evaluation.py  evaluation_config.py
h_arcane/core/: __init__.py  inngest_registry.py  runner.py  settings.py  status.py  task.py  worker.py
h_arcane/core/agents/: base.py  (+4 more)
h_arcane/dashboard/: __init__.py  emitter.py  events.py
h_arcane/db/: __init__.py  models.py  queries.py
h_arcane/evaluation/: __init__.py  context.py  criteria_evaluator.py  models.py  rubric.py  rubric_flattener.py  schemas.py  task_evaluator.py
h_arcane/experiments/: __init__.py  config.py  loader.py  runner.py
h_arcane/h_arcane/: __init__.py
h_arcane/inngest/: __init__.py  client.py  events.py  functions.py
h_arcane/migrations/: env.py
h_arcane/notebooks/: ablate_researchrubrics.ipynb  explore_researchrubrics.ipynb
h_arcane/schemas/: base.py  staged_rubric_schema.py
h_arcane/skills/: __init__.py
h_arcane/tools/: create_csv.py  create_docx.py  create_excel.py  ocr_image.py  read_csv.py  read_excel.py  read_pdf.py  responses.py
(+2186 files in other folders)
