[project]
name = "arcane-extension"
version = "0.1.0"
description = "Arcane experiment orchestration platform"
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = []

[tool.uv.workspace]
members = ["h_arcane", "arcane_builtins", "arcane_cli"]

[tool.uv.sources]
h-arcane = { workspace = true }
arcane-builtins = { workspace = true }
arcane-cli = { workspace = true }

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.slopcop.per-file-ignores]
"tests/**" = ["no-print"]
"**/arcane_cli/**" = ["no-print"]
"**/rendering/**" = ["no-print"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
timeout = 600
