[project]
name = "ergon"
version = "0.1.0"
description = "Ergon — a research runtime for agentic reinforcement learning"
license = "Apache-2.0"
authors = [{name = "Charlie Masters", email = "cm2435@users.noreply.github.com"}]
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-timeout>=0.8.2",
    "ruff>=0.9.0",
    "ty>=0.0.0a1",
    "slopcop>=0.1.0",
    "xenon>=0.9.0",
    "radon>=6.0.1",
    "pytest-cov>=5.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = []

[tool.uv.workspace]
members = ["ergon_core", "ergon_builtins", "ergon_cli", "ergon_infra"]

[tool.uv.sources]
ergon-core = { workspace = true }
ergon-builtins = { workspace = true }
ergon-cli = { workspace = true }
ergon-infra = { workspace = true }

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["C9"]
# C901: function/method is too complex (McCabe cyclomatic complexity)

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
# Pre-existing complexity debt — tracked for future refactor PRs, not introduced now.
# main (13): spike script, not library code
"scripts/**" = ["C901"]
# persist_definition (28): orchestrates full experiment graph persistence in one method
"ergon_core/ergon_core/core/runtime/services/experiment_persistence_service.py" = ["C901"]
# validate (19): validates multi-level experiment object graph
"ergon_core/ergon_core/api/experiment.py" = ["C901"]
# extract_agent_trajectories (13), _extract_trajectories (11)
"ergon_core/ergon_core/core/rl/extraction.py" = ["C901"]
"ergon_core/ergon_core/core/rl/rollout_service.py" = ["C901"]
# _load_problems (12): parses MiniF2F problem set from disk
"ergon_builtins/ergon_builtins/benchmarks/minif2f/benchmark.py" = ["C901"]
# _collect_file_evidence (11): gathers file path evidence across varied output shapes
"ergon_builtins/ergon_builtins/evaluators/criteria/file_check.py" = ["C901"]
# _messages_to_text (12): converts PydanticAI message union to chat-template string
"ergon_builtins/ergon_builtins/models/transformers_backend.py" = ["C901"]

[tool.slopcop]
# Per-rule excludes only when a rule is wrong for the whole repo (do not disable no-print / no-typing-any globally).

[tool.slopcop.per-file-ignores]
# Print is acceptable in standalone scripts and tests; library code under ergon_core (especially core/) should use logging.
"scripts/**" = ["no-print"]
"tests/**" = ["no-print"]
# User-facing CLI output and dashboard render helpers.
"**/ergon_cli/**" = ["no-print"]
"**/rendering/**" = ["no-print"]

[tool.ty.rules]
# try/except ImportError fallback assignments (Tool = None, AsyncSandbox = None, etc.)
# are correct at runtime but ty can't narrow through except branches.
invalid-assignment = "warn"

# SQLModel Field(sa_type=DateTime(...)) — ty misreads the overloaded __init__.
[[tool.ty.overrides]]
include = ["**/persistence/**/models.py", "**/persistence/graph/**"]
[tool.ty.overrides.rules]
invalid-argument-type = "warn"

# Inngest step functions: ctx.event.data is typed as JSON, not the unpacked model;
# ctx.step.run accepts sync or async but stubs only declare async.
[[tool.ty.overrides]]
include = ["**/runtime/inngest/**"]
[tool.ty.overrides.rules]
invalid-argument-type = "warn"

# pydantic-ai Tool(function=...) — ToolFuncEither union doesn't resolve async callables.
# invalid-return-type: async tool functions return Coroutine but stubs expect plain value.
[[tool.ty.overrides]]
include = [
    "**/benchmarks/**/toolkit.py",
    "**/tools/*_toolkit.py",
]
[tool.ty.overrides.rules]
invalid-argument-type = "warn"
unresolved-attribute = "warn"
invalid-return-type = "warn"

# E2B sandbox SDK — untyped package; proxy wrappers forward *args/**kwargs to typed methods.
[[tool.ty.overrides]]
include = ["**/providers/sandbox/**"]
[tool.ty.overrides.rules]
invalid-argument-type = "warn"
unresolved-attribute = "warn"
call-non-callable = "warn"
no-matching-overload = "warn"

# Transformers/torch optional deps — Unknown types cascade from conditional imports.
# unknown-argument: pydantic AliasChoices on ModelResponse.provider_details.
[[tool.ty.overrides]]
include = ["**/models/transformers_backend.py"]
[tool.ty.overrides.rules]
invalid-argument-type = "warn"
unresolved-attribute = "warn"
call-non-callable = "warn"
invalid-return-type = "warn"
unknown-argument = "warn"

# pydantic-ai message formatting — complex generic dict unions ty can't resolve.
[[tool.ty.overrides]]
include = ["**/providers/generation/pydantic_ai_format.py"]
[tool.ty.overrides.rules]
invalid-argument-type = "warn"
unresolved-attribute = "warn"
no-matching-overload = "warn"

# RL adapter — inngest send, tokenizer, and mixed optional-dep types.
# invalid-return-type: AutoTokenizer.from_pretrained → Unknown can't verify Tokenizer protocol.
[[tool.ty.overrides]]
include = ["**/core/rl/**"]
[tool.ty.overrides.rules]
invalid-argument-type = "warn"
unresolved-attribute = "warn"
invalid-return-type = "warn"

# SQLModel .where() / .order_by() column expressions — ty can't resolve SQLAlchemy operator overloads.
# unresolved-attribute: Column(datetime|UUID).desc() / .in_() — the SQLAlchemy
# InstrumentedAttribute descriptor exposes these, but ty sees the Python type only.
[[tool.ty.overrides]]
include = [
    "**/persistence/queries.py",
    "**/persistence/telemetry/repositories.py",
    "**/persistence/context/repository.py",
    "**/core/rl/rollout_service.py",
]
[tool.ty.overrides.rules]
invalid-argument-type = "warn"
unresolved-attribute = "warn"

# Remaining files with isolated third-party type issues (inngest JSON, pydantic-ai, SQLModel select).
[[tool.ty.overrides]]
include = [
    "**/core/api/runs.py",
    "**/runtime/tracing.py",
    "**/runtime/services/**",
    "**/runtime/execution/**",
    "**/providers/judges/**",
    "**/benchmarks/smoke_test/**",
    "ergon_cli/**",
    "ergon_infra/**",
]
[tool.ty.overrides.rules]
invalid-argument-type = "warn"
unresolved-attribute = "warn"
no-matching-overload = "warn"
not-iterable = "warn"
invalid-parameter-default = "warn"

# Worker ABC: abstract async generator yield + Unknown response_text.
[[tool.ty.overrides]]
include = ["ergon_core/ergon_core/api/worker.py"]
[tool.ty.overrides.rules]
invalid-yield = "warn"
invalid-argument-type = "warn"

# inngest_client.send_sync signature vs Callable[[Event], None] — harmless mismatch.
[[tool.ty.overrides]]
include = ["**/core/api/app.py"]
[tool.ty.overrides.rules]
invalid-argument-type = "warn"

# Tests: SQLModel column expressions (.desc(), .is_()) and asyncio.run with AsyncGenerator.
# Tests also exercise pydantic-ai Tool helpers and stub sandbox objects, so we
# need the same toolkit-style relaxations that apply to production code in
# tools/ and benchmarks/.
[[tool.ty.overrides]]
include = ["tests/**"]
[tool.ty.overrides.rules]
unresolved-attribute = "warn"
invalid-argument-type = "warn"
invalid-return-type = "warn"
call-non-callable = "warn"
not-subscriptable = "warn"

[tool.ty.environment]
extra-paths = ["ergon_core", "ergon_builtins", "ergon_cli", "ergon_infra"]

[tool.ty.analysis]
allowed-unresolved-imports = [
    "trl", "trl.**",
    "outlines", "outlines.**",
    "torch", "torch.**",
    "transformers", "transformers.**",
    "e2b", "e2b.**",
    "e2b_code_interpreter", "e2b_code_interpreter.**",
    "vllm", "vllm.**",
    "datasets", "datasets.**",
    "skypilot", "skypilot.**",
    "sky", "sky.**",
    "verl", "verl.**",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests/unit", "tests/integration", "tests/e2e"]
timeout = 600
markers = [
    "slow: marks tests as slow (deselect with '-m not slow')",
    "e2e: end-to-end tests requiring full Docker stack",
    "integration: integration tests requiring a database but no Docker stack",
]
