[project]
name = "ergon-builtins"
version = "0.1.0"
description = "Built-in benchmarks, workers, evaluators, and criteria for Ergon"
license = "Apache-2.0"
requires-python = ">=3.13"
dependencies = [
    "ergon-core",
]

[project.optional-dependencies]
local-models = [
    "torch>=2.0",
    "transformers>=4.40.0",
    "outlines",
]
data = [
    "pandas",
    "datasets>=2.20",
    "huggingface_hub",
    "swebench>=3.0,<5",
]
all = [
    "ergon-builtins[local-models,data]",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["ergon_builtins*"]
