[project]
name = "ergon-cli"
version = "0.1.0"
description = "CLI for Ergon experiment orchestration"
license = "Apache-2.0"
requires-python = ">=3.13"
dependencies = ["ergon-core", "ergon-builtins[all]"]

[project.optional-dependencies]
training = ["ergon-infra[all]"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["ergon_cli*"]

[project.scripts]
ergon = "ergon_cli.main:main"
